Modify project stracture

--- a/config.json
+++ b/config.json
@@ -1,4 +1,10 @@
 {
   "SERVICE": {
+    "STORAGE_TYPE": "json",
+    "HOST": "127.0.0.1",
+    "PORT": 8080
+  },
+  "WORKER": {
+    "PREFIXES": ["050", "051", "052", "053", "054", "055", "056", "057", "058", "059"]
   }
 }
