added exception handling

--- a/config.json
+++ b/config.json
@@ -6,5 +6,8 @@
   },
   "WORKER": {
     "PREFIXES": ["050", "051", "052", "053", "054", "055", "056", "057", "058", "059"]
+  },
+  "API": {
+    "TASK_CHUNK_SIZE": 5
   }
 }
